--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
