--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "datatables.net": "^2.2.2",
+    "datatables.net-bs5": "^2.2.2",
     "datatables.net-dt": "^2.2.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.4"
   }
 }
